# snakeBot-LuningFan

./: CMakeLists.txt
Project2/: Project2.vcxproj
RFT/: CMakeLists.txt
RFT/bk/: ChLinkPIDEngine.cpp  ChLinkPIDEngine.h
RFT/include/: ChFunction_Data.h  ChFunction_PID.h  ChFunction_SquareWave.h  ChronoIO.h  Controller.h  GuiControl.h  RFT.h  Robot.h  VectorUtility.h  mesher.h
RFT/src/: ChronoIO.cpp  Controller.cpp  GuiControl.cpp  RFT.cpp  Robot.cpp  main.cpp  mesher.cpp
include/: ChFunction_Data.h  ChFunction_PID.h  ChFunction_SquareWave.h  Controller.h  GuiControl.h  RFT.h  Robot.h  SnakeSimDefines.h  VectorUtility.h  mesher.h
matlab/: CompareWithExperiment.m  CurvesDrift.m  ParametricSweepInitConfig.m  ParametricSweepInitConfig_limittedParams.m  batchRunSimulationsJMR_2Dshifting.m  dumPlotData.m  findLocalMaxAndMin.m  findMinVerticalDisplacement.m  getPositionAndSpeedData.m  guide_files.txt  importForceData.m  runChrono.m  runChronoSweep.m  runChronoSweep_onePeg.m  runChronoSweep_onePeg_fewSamples.m  runChronoSweep_onePeg_multipleInit.m
matlab/ExperimentalData/: experimentalRobot.mat  guide.txt  positionAndForceDataOnPeg.mat
matlab/bestSnakeParameters/: params1.txt  params2.txt  params3.txt  params4.txt  params5.txt
src/: ChronoIO.cpp  Controller.cpp  GuiControl.cpp  RFT.cpp  Robot.cpp  main.cpp
